# cyberslug-python

./: README.md  pyproject.toml
src/cyberslug/: seaslug.py
src/scripts/: sea-slug.ipynb
